# unix-fifo-async

./: .travis.yml  Cargo.toml  README.md  README.tpl
examples/: read_print_repeat.rs  read_write_repeat.rs  write_repeat.rs
src/: lib.rs  named_pipe.rs  util.rs
