[package]
name = "unix-fifo-async"
version = "0.0.3"
authors = ["Follpvosten <wolfi@karpador.xyz>"]
license = "MIT"
description = "Async wrapper for working with Unix named pipes (FIFOs)"
homepage = "https://github.com/Follpvosten/unix-fifo-async"
repository = "https://github.com/Follpvosten/unix-fifo-async"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "0.99"
nix = "0.15"

[badges]
travis-ci = { repository = "Follpvosten/unix-fifo-async" }